k8s/kube-system/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  routes:
  - match: Host(`traefik.k8s`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-users
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: kube-system
spec:
  redirectRegex:
    regex: '^http://traefik.k8s/(.*)'
    replacement: 'http://traefik.k8s/dashboard/${1}'
